# Gordinay

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirement.txt
__TODO__/: packer_v1.py
data/clients/65965e2a/downloads/: readme.md
docs/: Guide_poetry.md  Guide_setup.md
src/: coloredFormatter.py  main.py
src/__app__/client_app/: main.py
src/__app__/client_app/__conf__/: main.py
src/__app__/client_app/features/audioRecorder/: main.py
src/__app__/client_app/features/cli/: main.py
src/__app__/client_app/features/commandHandler/: main.py
src/__app__/client_app/features/dowload/: main.py
src/__app__/client_app/features/fileManager/: main.py
src/__app__/client_app/features/hashDump/: main.py
src/__app__/client_app/features/ipConfig/: main.py
src/__app__/client_app/features/keyLogger/: main.py
src/__app__/client_app/features/networkInfo/: main.py
src/__app__/client_app/features/record/: main.py
src/__app__/client_app/features/reverseShell/: main.py
src/__app__/client_app/features/screenshot/: main.py
src/__app__/client_app/features/search/: main.py
src/__app__/client_app/features/shell/: main.py
src/__app__/server_app/: server.py  server_app.py  server_cli.py  server_socket.py
src/__app__/server_app/tools/: stream_viewer.py
src/__conf__/: main.py
src/__utils__/: asciiArt.py  coloredFormatter.py  log.py  terminal.py
src/assets/: gordinay.txt
tests/: __init__.py  conftest.py  test_client_config.py  test_command_handler.py  test_features.py  test_file_manager.py  test_main.py  test_server.py  test_shell.py  test_socket_client.py  test_utils.py
(+6 files in other folders)
