[project]
name = "rat-project"
version = "0.1.0"
description = "Remote Administration Tool"
authors = [

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["sounddevice (>=0.5.3,<0.6.0)", "numpy (>=2.3.5,<3.0.0)", "scipy (>=1.16.3,<2.0.0)", "pywin32 (>=311,<312)", "cryptography (>=46.0.3,<47.0.0)", "tabulate (>=0.9.0,<0.10.0)"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
