[project]
name = "Gordinay"
version = "1.1.0"
description = "Remote Administration Tool - Haram version"
authors = [{ name = "Naywvi" }, { name = "Gordibus" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "tabulate>=0.9.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.6",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pypykatz>=0.6.3",
    "impacket>=0.11.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["flake8>=6.0.0", "pre-commit>=3.0.0", "pytest>=7.0.0"]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-timeout"]

[tool.pytest.ini_options] # pytest configuration - Remove warnings about unhandled thread exceptions
filterwarnings = ["ignore::pytest.PytestUnhandledThreadExceptionWarning"]

[tool.poetry]
package-mode = false
